# vs-emscripten

./: .clang-format  .gitignore  README.md  Settings.md  VSEmscripten.sln  clean.bat  install.bat
BuildTools/: DeleteFiles.py  Install.py  Tools.pyproj
Source/: EmAr.cs  EmCommon.cs  EmCxx.cs  EmLink.cs  EmSource.cs  EmSwitchs.cs  EmTask.cs  EmUtils.cs  EmWebIDL.cs  EmscriptenTask.csproj
Source/Toolset/: Platform.Common.props  Platform.Default.props  Platform.props  Platform.targets
Source/Toolset/PlatformToolsets/emsdk/: Toolset.props  Toolset.targets  WebIDL.props
Source/Toolset/PlatformToolsets/emsdk/CMake/: FindVSEmscripten.cmake  VSEmscripten.cmake
Source/Toolset/PlatformToolsets/emsdk/Properties/: em_adv_override.xml  em_ar.xml  em_cxx.xml  em_directories.xml  em_general.xml  em_js_general.xml  em_js_link.xml  em_link.xml  em_settings.xml  em_wasm.xml
Test/Common/: TestUtils.cs  TestUtils.csproj
Test/Common/Properties/: AssemblyInfo.cs
Test/Test01/: Test01.cs  Test01.csproj  Test1  Test2  Test3  Test4  Test5  UnitTest.csproj  UnitTest1.cs  fn1.c  fn2.c  fn3.c  main.c  main.cpp  main.h  main2.c
Test/Test02/: CMakeLists.txt  MakeFileProject.vcxproj  Test02.cs  Test02.csproj  UnitTest1.cs  main.cpp
Test/Test02/Properties/: AssemblyInfo.cs
Test/Test02/VsGlobals/: CMakeLists.txt  Main.cpp
Test/Test03/: CMakeLists.txt
Test/Test03/Exe/: CMakeLists.txt  main.cpp
Test/Test03/HTML/: CMakeLists.txt
Test/Test03/Lib/: CMakeLists.txt  MockLibAPI.cpp  MockLibAPI.h  MockLibAPI_Impl.cpp
Test/Test03/SDL/: Bindings.cpp  Bindings.h  Bindings.idl  CMakeLists.txt  Main.cpp  Main.html  WrappedBindings.cpp
Test/Test04/: Manual.sln  Project1.sln  Project1.vcxproj  Test04.cs  Test04.csproj
Test/Test04/Application/: Application.vcxproj
Test/Test04/Basic/: Basic.vcxproj  Source.cpp
Test/Test04/Exec/: Exec.vcxproj  Project3.vcxproj  main.cpp
Test/Test04/HTMLApplication/: HTMLApplication.vcxproj
Test/Test04/HelloWorld/: HelloWorld.vcxproj  Source.cpp
Test/Test04/Lib/: Lib.vcxproj  MockLibAPI.cpp  MockLibAPI_Impl.cpp  Project2.vcxproj
Test/Test04/Manual/: Manual.sln
Test/Test04/Manual/Application/: Application.vcxproj  main.cpp
Test/Test04/Manual/HTMLApplication/: HTMLApplication.vcxproj  Main.cpp
Test/Test04/Manual/HelloWorld/: HelloWorld.vcxproj
Test/Test04/Manual/SDLApp/: SDLApp.vcxproj
Test/Test04/Manual/StaticLibrary/: StaticLibrary.vcxproj
Test/Test04/Properties/: AssemblyInfo.cs
Test/Test04/SDLApp/: Main.cpp  SDLApp.vcxproj
Test/Test04/StaticLibrary/: StaticLibrary.vcxproj
Test/Test05/: CodeTests.cs  EmptyBuildEngine.cs  Test05.csproj  TestEmAr.cs  TestEmCxx.cs  TestEmLink.cs  TestUtils.cs
Test/Test05/Tests/MultiDependencyRebuild/: Input1.cpp  Input1.h  Input2.cpp  Input2.h  Input3.cpp  Input3.h  Main.cpp  Main.h  Main1.cpp
Test/Test05/Tests/New folder/: New Text Document.c
